--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
 	"dependencies": {
 		"@heroicons/react": "^2.0.13",
 		"@portabletext/react": "^2.0.0",
+		"@sanity/block-content-to-react": "^3.0.0",
 		"@sanity/image-url": "^1.0.1",
 		"@sanity/vision": "^3.0.0",
+		"@tailwindcss/line-clamp": "^0.4.2",
 		"next": "latest",
 		"next-sanity": "^3.1.3",
 		"react": "18.2.0",
